# ChangeLog for net-mail/procmail
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/net-mail/procmail/Attic/ChangeLog,v 1.3 2002/06/18 14:40:42 g2boojum Exp $

  18 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :

  Thanks to Jose Fonseca procmail now uses /etc/procmailrc to determine the
  default mailbox instead of patching the source.

*procmail-3.22-r1 (1 Feb 2002)
  3 May 2002; J.Hudson <jhhudso@gentoo.org> procmail-3.22-r1.ebuild :

  Added mbox use item to ebuild. When used, procmail will not change
  the location of mail spool to a maildir style location. Instead, it
  will use the /var/spool/mail/* default.

*procmail-3.22 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.