@@ -1,6 +1,15 @@
 # ChangeLog for net-mail/procmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/procmail/Attic/ChangeLog,v 1.3 2002/06/18 14:40:42 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/procmail/Attic/ChangeLog,v 1.4 2002/07/16 14:12:56 raker Exp $
+
+*procmail-3.22-r2 (16 Jul 2002)
+
+  16 Jul 2002; Nick Hadaway <raker@gentoo.org> procmail-3.22-r2.ebuild :
+
+  Updated sed statement to include a "-O2" so procmail doesn't barf
+  on the strstr() tests.
+
+*procmail-3.22-r2 (18 Jun 2002)
 
   18 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
 
@@ -8,6 +17,7 @@
   default mailbox instead of patching the source.
 
 *procmail-3.22-r1 (1 Feb 2002)
+
   3 May 2002; J.Hudson <jhhudso@gentoo.org> procmail-3.22-r1.ebuild :
 
   Added mbox use item to ebuild. When used, procmail will not change
